--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "clipboard": "^2.0.11",
     "file-saver": "^2.0.5",
     "pinia": "^2.0.13",
     "vue": "^3.2.25",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.14",
     "vue3-cookies": "^1.0.6",
+    "vue3-json-viewer": "^2.2.2",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0",
     "yaml": "^2.0.1"
