--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vue-router": "^4.0.15",
     "vue3-cookies": "^1.0.6",
     "vue3-json-viewer": "^2.2.2",
-    "vuetify": "^3.0.0-beta.2",
+    "vuetify": "^3.0.0-beta.1",
     "webfontloader": "^1.6.28",
     "yaml": "^2.1.0"
   },
@@ -26,11 +26,11 @@
     "@cypress/vue": "^3.1.2",
     "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@vitejs/plugin-vue": "^2.3.3",
-    "@vuetify/vite-plugin": "^1.0.0-alpha.10",
     "cypress": "^9.6.1",
     "sass": "^1.52.0",
     "sass-loader": "^13.0.0",
     "vite": "^2.9.9",
+    "vite-plugin-vuetify": "^1.0.0-alpha.11",
     "vue-cli-plugin-vuetify": "~2.4.8",
     "vuetify-loader": "^2.0.0-alpha.0"
   }
