--- a/cypress/fixtures/foret.yaml
+++ b/cypress/fixtures/foret.yaml
@@ -2,6 +2,7 @@ version: 0
 application:
   name: foret
   version: 1
+  defaultLanguage: fr
 compositeReferences:
   localizations:
     components:
